syntax = "proto3";

package calculator.v1;

// 연산 요청 메시지
message CalculationRequest {
  int32 number_a = 1;
  int32 number_b = 2;
}

// 연산 결과 메시지
message CalculationResponse {
  int32 result = 1;
}

// 텍스트 조합 요청 메시지
message TextRequest {
  string text_a = 1;
  string text_b = 2;
}

// 텍스트 조합 결과 메시지
message TextResponse {
  string result = 1;
}
